[package]
name = "domain-socket"
version = "0.1.0"
authors = ["ttang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
futures = "0.3.14"
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["full"] }
tokio-stream = "0.1.5"
tokio-util = { version = "0.6.5", features = ["full"] }

[build-dependencies]
prost-build = "0.7.0"
